--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 
+id_rsa
+id_rsa.pub
+
 # Include override files you do wish to add to version control using negated pattern
 #
 # !example_override.tf
